# easydns

./: .gitignore  CMakeLists.txt  LICENSE  conf.txt
scripts/: CMakeLists.txt  TODO  easyscp  easyssh
src/: CMakeLists.txt  server.c  utils.h
web/: addressbook.php  index.php  table.txt
