cmake_minimum_required (VERSION 2.8)
project (EasyDNS)

set (EasyDNS_VERSION_MAJOR 0)
set (EasyDNS_VERSION_MINOR 1)

# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)

add_subdirectory (src)
